crates/ink/tests/ui/selector_id/fail/non_literal_parameter.stderr
error: expected exactly 2 arguments (Abi enum, string literal), found 1
 --> tests/ui/selector_id/fail/non_literal_parameter.rs:2:34
  |
2 | const _: u32 = ink::selector_id!(INPUT);
  |                                  ^^^^^
